# Drone.Server.RPi

./: .gitignore  CMakeLists.txt  CMakePresets.json  CreateStrippedBinary.wsl2.sh  UploadStrippedBinary.wsl2.sh  vcpkg.json
app/: CMakeLists.txt
app/PiSubmarine/Drone/Server/RPi/: Config.h  main.cpp
src/: CMakeLists.txt
src/PiSubmarine/Drone/Server/RPi/: BatteryStore.cpp  BatteryStore.h  ControlLampAdapter.cpp  ControlLampAdapter.h  DepthProvider.cpp  DepthProvider.h  ProximityProvider.cpp  ProximityProvider.h
test/: CMakeLists.txt
test/PiSubmarine/Drone/Server/RPi/: BatteryStoreTest.cpp  DepthProviderTest.cpp  ProximityProviderTest.cpp
